# Genre-Entities

./: .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md
cmake/: EngineSrcList.cmake  FindEasyLoggingPP.cmake  FindLuaJIT.cmake  FindSDL2.cmake  Findbgfx.cmake  IncludesList.cmake  MainSrcList.cmake  TestSrcList.cmake
resources/core/: compile.config  core.package
resources/core/script/: init.lua  init.resource  postinit.lua  postinit.resource
resources/core/shader/01-cubes/: cubes.resources
resources/core/shader/common/imgui/: imgui_shaders.resources
resources/core/text/: hello_world.resource
run/: init.lua  postinit.lua
run/test/: error_syntax.lua  simple_table.lua  simple_table_alt.lua  sparse_array.lua
run/test/common/: complex_table.lua  complex_tostring.lua  prim_cstr_table.lua  recursive_table.lua  simple_table_alt.lua
run/test/more/: gensys.lua  gensys_cview.lua  gensys_genview.lua  is_jit.lua
run/test/tests/: 0000_basic.lua  0001_sandbox_test.lua  0005_gensys_test.lua  0005_gensys_test_comp_match.lua  0005_gensys_test_gc.lua  0005_gensys_test_genres.lua  0005_gensys_test_matching.lua  0005_gensys_test_strings.lua
src/genre/: Genre.cpp  Genre.hpp  Gensys.cpp  Gensys.hpp  GensysIntermediate.cpp  GensysIntermediate.hpp  Logger.cpp  Logger.hpp  Script.cpp  Script.hpp  main.cpp
src/pegr/: Main.cpp  Test.cpp  main.cpp  test.cpp
src/pegr/algs/: Algs.hpp  Partition_Tracker.cpp  Partition_Tracker.hpp  Pod_Chunk.cpp  Pod_Chunk.hpp  QIFU_Map.hpp
src/pegr/app/: Game.cpp  Game.hpp
src/pegr/debug/: DebugAssertLuaBalance.cpp  DebugAssertLuaBalance.hpp  DebugMacros.hpp  Debug_Assert_Lua_Balance.cpp  Debug_Assert_Lua_Balance.hpp  Debug_Macros.hpp
src/pegr/engine/: App_State.cpp  App_State.hpp  App_State_Machine.cpp  App_State_Machine.hpp  Applayer.cpp  Applayer.hpp  Engine.cpp  Engine.hpp
src/pegr/except/: Except.cpp  Except.hpp
src/pegr/gensys/: Compiler.cpp  Compiler.hpp  Entity_Collection.cpp  Entity_Collection.hpp  Entity_Events.cpp  Entity_Events.hpp  Entity_Handle.cpp  Entity_Handle.hpp  Entity_Tick_Event.cpp  Entity_Tick_Event.hpp  Events.cpp  Events.hpp  Gensys.cpp  Gensys.hpp  GensysCompiler.cpp  GensysIntermediate.cpp  GensysIntermediate.hpp  GensysLuaInterface.cpp  GensysLuaInterface.hpp  GensysLuaInterfaceExecution.cpp  GensysLuaInterfaceSetup.cpp  GensysRuntime.cpp  GensysRuntime.hpp  GensysUtil.cpp  Interm_Types.cpp  Interm_Types.hpp  Lua_Interf.hpp  Lua_Interf_Runtime.cpp  Lua_Interf_Setup.cpp  PodChunk.cpp  PodChunk.hpp  PodChunkPtr.cpp  PodChunkPtr.hpp  Pod_Chunk.cpp  Pod_Chunk.hpp  Runtime.cpp  Runtime.hpp  Runtime_Types.cpp  Runtime_Types.hpp  Util.cpp  (+1 more)
src/pegr/logger/: Logger.cpp  Logger.hpp
src/pegr/render/: Handles.hpp  Shaders.cpp  Shaders.hpp
src/pegr/resource/: Json_Util.cpp  Json_Util.hpp  Oid.cpp  Oid.hpp  Resources.cpp  Resources.hpp
src/pegr/scheduler/: Lua_Interf.cpp  Lua_Interf.hpp  Sched.cpp  Sched.hpp  SchedLuaInterface.cpp  SchedLuaInterface.hpp
src/pegr/script/: Lua_Interf_Util.cpp  Lua_Interf_Util.hpp  Script.cpp  Script.hpp  ScriptHelper.cpp  ScriptHelper.hpp  Script_Helper.cpp  Script_Helper.hpp  Script_Resource.cpp  Script_Resource.hpp  Script_Util.cpp  Script_Util.hpp
src/pegr/test/: Algs_Test.cpp  App_State_Machine_Test.cpp  DebugTest.cpp  Debug_Test.cpp  FlagTest.cpp  Flag_Test.cpp  GensysIntermediateTest.cpp  GensysLITest.cpp  GensysRuntimeTest.cpp  Gensys_Intermediate_Test.cpp  Gensys_LI_Test.cpp  Gensys_Runtime_Test.cpp  InitializationSanityTest.cpp  Initialization_Sanity_Test.cpp  Lua_As_Lambda_Test.cpp  MemoryTest.cpp  Memory_Test.cpp  PodChunkTest.cpp  Pod_Chunk_Test.cpp  QIFU_Test.cpp  Resources_Test.cpp  ScriptHelperTest.cpp  ScriptTest.cpp  Script_Helper_Test.cpp  Script_Test.cpp  TestMacros.hpp  Test_Util.hpp  Tests.hpp  UniquePtrTest.cpp  Unique_Handles_Test.cpp  Unique_Ptr_Test.cpp
src/pegr/text/: Text.cpp  Text.hpp
src/pegr/util/: Algs.hpp
src/pegr/winput/: Dbgui.cpp  Dbgui.hpp  Enum_Utils.cpp  Enum_Utils.hpp  Winput.cpp  Winput.hpp
tool/: AlphabetizeIncludes.py  Common.py  EngineSrcListBoilerplate.cmake  GenerateEngineSrcList.py  GenerateHeaderGuards.py  GenerateIncludesList.py  GenerateSrcLists.py  GenerateTestList.py  SrcListBoilerplate.cmake  SyncEngineCodelite.py  SyncEngineVS.py  SyncVS.py  TestsBoilerplate.hpp
